added config message

--- a/catalog-service-prod.yml
+++ b/catalog-service-prod.yml
@@ -1,2 +1,2 @@
 polar:
-  greeting: "Welcome to the production catalog from the config server now on Github"
+  greeting: "Welcome to the production catalog from the config server now on Github on Prod"
