--- a/catalog-service.yml
+++ b/catalog-service.yml
@@ -1,2 +1,2 @@
 polar:
-  greeting: "Welcome to the production catalog from the config server now on Github Staging"
+  greeting: "Welcome to catalog from a fresh config server"
