--- a/catalog-service-prod.yml
+++ b/catalog-service-prod.yml
@@ -1,2 +1,2 @@
 polar:
-  greeting: "Welcome to catalog from a fresh config server PROD"
+  greeting: "Welcome to catalog from a fresh config server PROD new"
